--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.475.0",
     "next": "^15.2.3",
+    "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "stripe": "^18.0.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
+    "@types/qs": "^6.9.18",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
