--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.1.12",
     "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-slider": "^1.3.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toast": "^1.2.6",
     "@stripe/react-stripe-js": "^3.6.0",
